# UAFSan

./: .gitattributes  README.md
UAFSan/instrumentation module/: .gitattributes
UAFSan/instrumentation module/lib/Transforms/: CMakeLists.txt
UAFSan/instrumentation module/lib/Transforms/Count/: CMakeLists.txt
UAFSan/instrumentation module/lib/Transforms/Instrumentation/: CMakeLists.txt  Count.cpp
UAFSan/runtime library/cbaps/include/: uthash.h
sourcecode/instrumentation module/include/llvm/Transforms/Count/: BAPSPass.h
sourcecode/instrumentation module/lib/Transforms/Count/: Count.cpp
sourcecode/runtime library/cbaps/: CMakeLists.txt
sourcecode/runtime library/cbaps/include/: baps.h
sourcecode/runtime library/cbaps/lib/: baps.c
sourcecode/test/: main.c
