cmake_minimum_required(VERSION 3.16)
project(cbaps C)
set(CMAKE_CXX_FLAGS "-rdynamic -g -O0 -lm -ldl")
set(CMAKE_C_FLAGS "-rdynamic -g -O0 -lm -ldl")
set(CMAKE_CXX_COMPILER "clang++")
set(CMAKE_C_COMPILER "clang")
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_STANDARD 11)
include_directories(include)

add_library(baps_static STATIC include/baps.h include/uthash.h lib/baps.c)
target_link_libraries(baps_static dl)
set_target_properties(baps_static PROPERTIES OUTPUT_NAME "baps")
set_target_properties(baps_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

add_library(baps_shared SHARED include/baps.h include/uthash.h lib/baps.c)
target_link_libraries(baps_shared dl)
set_target_properties(baps_shared PROPERTIES OUTPUT_NAME "baps")
set_target_properties(baps_shared PROPERTIES CLEAN_DIRECT_OUTPUT 1)
